/*
 * $Id: ChangeLog,v 1.1953 2003/12/29 01:29:22 peterrees Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-12-29 11:41 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/contrib/libct/strfile.prg
   * fixed strfile() - we still haven't SETSHARE()/GETSHARE()/SETFCREATE()
     when they will be implemented this function has to be updated

  * xharbour/source/rtl/filesys.c
   * added errorcodes conversion for OpenWatcom.
     full conversion table for all compilers is on my TODO list
     but with low priority

  * xharbour/source/rtl/gtpca/gtpca.c
   ! small fix for OpenWatcom

2003-12-29 14:26 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/gtwvt/gtwvt.c
   + added K_LDBLCLK & K_RDBLCLK support
   + Turn off K_MOUSEMOVE handling by default ( see hbgtwvt.h )
  * include/hbgtwvt.h
   + added extern BOOL HB_EXPORT hb_wvt_gtSetMouseMove( BOOL bHandleEvent)
   *     - allows mouse movement events to be handled

2003-12-29 02:25 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
  + doc/en/bkgtsks.txt
  * doc/en/set.txt
    + Added background tasks documentation.

2003-12-28 23:14 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/config/rules.cf
   * small fixes

  * xharbour/config/dos/djgpp.cf
   * fixed include dirs

  * xharbour/config/dos/watcom.cf
   * fixed include dirs
   * some optimizations enabled - Loernzo please check your sources
     if it will break anything I would like to know so I'll rewert it.

  * xharbour/xharbour.spec
   * fixed missing "'" in PLD detection
   * Aurox distro detection added

  * xharbour/source/vm/errorapi.c
   * small change to cause GPF in DJGPP for //ERRGPF switch.

  * xharbour/contrib/libct/keyset.c
   * fixed missing ")"

  * xharbour/contrib/libct/files.c
   * disabled some part of code to compile it with OpenWatcom